--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,4 +24,4 @@
 @import 'components/user-form';
 @import 'components/agreement';
 @import 'components/send-button';
-@import 'components/mobile-nav';
+@import 'components/mobile-container';
