--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,3 +1,9 @@
+// header {
+//   @media screen and (max-width: 767px) {
+//     position: relative;
+//   }
+// }
+
 .header {
   display: flex;
   align-items: center;
