--- a/css/main.css
+++ b/css/main.css
@@ -1974,6 +1974,8 @@ ul {
 .mobile-container {
   padding-top: 48px;
   padding-left: 40px;
+  padding-bottom: 48px;
+  letter-spacing: 0.02em;
   background-color: #ffffff;
 }
 
@@ -1991,7 +1993,6 @@ ul {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.18;
-  letter-spacing: 0.02em;
   color: #212121;
 }
 
@@ -1999,15 +2000,54 @@ ul {
   margin-bottom: 37.71px;
 }
 
-.mobile-nav__link--current {
+.mobile-nav__link--current.link {
   color: #2196f3;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
 }
 
 .mobile-contacts__link--tel {
   font-weight: 500;
   font-size: 34px;
   line-height: 1.18;
-  letter-spacing: 0.02em;
   color: #2196f3;
+}
+
+.mobile-contacts__link--mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #757575;
+}
+
+.mobile-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile-social__link.link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196f3;
+}
+
+.mobile-social__item {
+  padding: 0 10px;
+}
+
+.mobile-social__item:first-child {
+  padding-left: 0;
+}
+
+.mobile-social__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 /*# sourceMappingURL=main.css.map */
