--- a/css/main.css
+++ b/css/main.css
@@ -1652,14 +1652,23 @@ ul {
 /* Backdrop */
 .backdrop {
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
+  padding-top: 30px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  overflow-y: scroll;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding-top: 90px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -1676,21 +1685,44 @@ ul {
 
 /* Modal */
 .modal {
-  position: absolute;
+  position: relative;
+  width: 100%;
+  max-width: 450px;
+  padding-bottom: 40px;
   top: 50%;
   left: 50%;
-  height: 581px;
-  width: 528px;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    width: 528px;
+    max-width: 528px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .modal-title {
@@ -1700,6 +1732,13 @@ ul {
   text-align: center;
   margin-bottom: 12px;
   color: #212121;
+}
+
+@media screen and (max-width: 767px) {
+  .modal-title {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 
 .close-contaiter {
@@ -1712,7 +1751,7 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 8px;
+  padding-top: 8px;
   margin-right: 8px;
   margin-bottom: 2px;
 }
@@ -1754,6 +1793,13 @@ ul {
   margin-right: auto;
 }
 
+@media screen and (max-width: 767px) {
+  .user-form {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
 .user-form__field {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1781,8 +1827,19 @@ ul {
 
 .user-form__input {
   height: 40px;
-  width: 448px;
   padding: 12px 12px 12px 42px;
+}
+
+@media screen and (max-width: 767px) {
+  .user-form__input {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .user-form__input {
+    width: 448px;
+  }
 }
 
 .user-form__comment {
@@ -1790,7 +1847,18 @@ ul {
   display: block;
   resize: none;
   height: 120px;
-  width: 448px;
+}
+
+@media screen and (max-width: 767px) {
+  .user-form__comment {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .user-form__comment {
+    width: 448px;
+  }
 }
 
 .user-form__comment::-webkit-input-placeholder {
@@ -1898,7 +1966,7 @@ ul {
   display: inline-block;
   width: 16px;
   height: 15px;
-  margin-right: 7px;
+  margin-right: 8px;
   border: 2px solid #212121;
   border-radius: 2px;
 }
@@ -1931,11 +1999,25 @@ ul {
   color: #757575;
 }
 
+@media screen and (max-width: 767px) {
+  .agree-field__text {
+    font-size: 11.7px;
+    line-height: 1.17;
+  }
+}
+
 .agree-field__link {
   font-size: 14px;
   line-height: 1.71;
   text-decoration-skip-ink: none;
   color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .agree-field__link {
+    font-size: 11.7px;
+    line-height: 1.17;
+  }
 }
 
 .button-field {
