--- a/sass/components/_agreement.scss
+++ b/sass/components/_agreement.scss
@@ -19,7 +19,7 @@
     display: inline-block;
     width: 16px;
     height: 15px;
-    margin-right: 7px;
+    margin-right: 8px;
 
     border: 2px solid $first-text-color;
     border-radius: 2px;
@@ -46,6 +46,11 @@
     font-size: $font-size-14;
     line-height: $line-height-1-71;
     color: $second-text-color;
+
+    @media screen and (max-width: 767px) {
+      font-size: 11.7px;
+      line-height: $line-height-1-17;
+    }
   }
 
   &__link {
@@ -54,5 +59,10 @@
 
     text-decoration-skip-ink: none;
     color: $accent-color;
+
+    @media screen and (max-width: 767px) {
+      font-size: 11.7px;
+      line-height: $line-height-1-17;
+    }
   }
 }
