--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,12 +1,22 @@
 /* Backdrop */
 .backdrop {
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
+
+  padding-top: 30px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 90px;
+  }
+
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+
+  overflow-y: scroll;
 
   @include transit(opacity);
 
