--- a/sass/components/_close-button.scss
+++ b/sass/components/_close-button.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 8px;
+  padding-top: 8px;
   margin-right: 8px;
   margin-bottom: 2px;
 }
