--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,19 +1,36 @@
 /* Modal */
 .modal {
-  position: absolute;
+  position: relative;
+  width: 100%;
+  max-width: 450px;
+  padding-bottom: 40px;
+
   top: 50%;
   left: 50%;
 
-  height: 581px;
-  width: 528px;
+  transform: translate(-50%, -50%) scale(1);
+  @include transit(transform);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    width: 528px;
+    max-width: 528px;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%) scale(1);
+
+    @include transit(transform);
+  }
+
   background-color: $main-background-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
-  transform: translate(-50%, -50%) scale(1);
-
-  @include transit(transform);
 
   &-title {
     font-weight: $bold-font-weight;
@@ -22,5 +39,10 @@
     text-align: center;
     margin-bottom: 12px;
     color: $first-text-color;
+
+    @media screen and (max-width: 767px) {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
   }
 }
