--- a/css/main.css
+++ b/css/main.css
@@ -1534,27 +1534,30 @@ ul {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  width: 100%;
 }
 
 @media screen and (max-width: 1199px) {
   .subscribe-field {
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .subscribe-field {
-    padding-top: 72px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
 .label-text {
   display: block;
   padding-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-label {
+    margin-top: 72px;
+  }
 }
 
 .label-input {
@@ -1597,7 +1600,8 @@ ul {
 
 @media screen and (max-width: 1199px) {
   .label-input {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
   }
 }
 
@@ -1608,9 +1612,9 @@ ul {
 }
 
 .subscribe-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1618,6 +1622,7 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  width: 200px;
   padding: 10px 28px 10px 29px;
   font-weight: 700;
   font-size: 16px;
@@ -1633,7 +1638,10 @@ ul {
 
 @media screen and (max-width: 1199px) {
   .subscribe-button {
-    margin: 0 auto 60px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -1657,7 +1665,7 @@ ul {
   width: 100%;
   height: 100%;
   z-index: 2;
-  padding-top: 30px;
+  padding-top: 93px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   overflow-y: scroll;
@@ -1667,7 +1675,13 @@ ul {
 
 @media screen and (min-width: 768px) {
   .backdrop {
-    padding-top: 90px;
+    padding-top: 208px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    padding-top: 221px;
   }
 }
 
@@ -1689,10 +1703,9 @@ ul {
   width: 100%;
   max-width: 450px;
   padding-bottom: 40px;
-  top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, 0) scale(1);
+          transform: translate(-50%, 0) scale(1);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1714,10 +1727,9 @@ ul {
     position: absolute;
     width: 528px;
     max-width: 528px;
-    top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, 0) scale(1);
+            transform: translate(-50%, 0) scale(1);
     -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -2058,6 +2070,18 @@ ul {
   padding-left: 40px;
   padding-bottom: 48px;
   letter-spacing: 0.02em;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
 }
 
@@ -2065,6 +2089,36 @@ ul {
   .mobile-container {
     display: none;
   }
+}
+
+.menu-button {
+  color: #000000;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button:hover,
+.menu-button:focus {
+  color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button__svg {
+  z-index: 1;
+}
+
+.menu-button__icon-menu,
+.menu-button__icon-cross {
+  fill: currentColor;
+}
+
+.mobile-container {
+  display: none;
+}
+
+.mobile-container.is-open {
+  display: block;
 }
 
 .mobile-nav__list {
@@ -2076,6 +2130,15 @@ ul {
   font-size: 40px;
   line-height: 1.18;
   color: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-nav__link:hover,
+.mobile-nav__link:focus {
+  color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-nav__item:not(:last-child) {
