--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,10 +7,14 @@
   height: 100%;
   z-index: 2;
 
-  padding-top: 30px;
+  padding-top: 93px;
 
   @media screen and (min-width: 768px) {
-    padding-top: 90px;
+    padding-top: 208px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 221px;
   }
 
   background-color: rgba(0, 0, 0, 0.2);
