--- a/css/main.css
+++ b/css/main.css
@@ -1002,6 +1002,7 @@ ul {
 }
 
 .workers-item {
+  width: 100%;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1027,6 +1028,12 @@ ul {
     -ms-flex-preferred-size: calc(100% / 4 - 30px);
         flex-basis: calc(100% / 4 - 30px);
   }
+}
+
+.workers-img {
+  display: block;
+  min-width: 100%;
+  height: auto;
 }
 
 .workers-name {
