--- a/sass/components/_workers.scss
+++ b/sass/components/_workers.scss
@@ -30,12 +30,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
 
-.workers-img {
-  display: block;
-  min-width: 100%;
-  height: auto;
+  &-img {
+    display: block;
+    min-width: 100%;
+    height: auto;
+  }
 }
 
 .workers-name {
