--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -140,8 +140,7 @@
   padding: 0;
   border: none;
   background-color: transparent;
-
-  margin-left: 276px;
+  margin-left: auto;
 
   @media screen and (min-width: 768px) {
     display: none;
