Меняет стили в секции клиенты

--- a/css/main.css
+++ b/css/main.css
@@ -1138,9 +1138,9 @@ ul {
 }
 
 .customers-link.link {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
