--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  width: auto;
   height: 90px;
   color: $icon-inactive-color;
   border: 1px solid $icon-inactive-color;
