--- a/sass/components/_workers.scss
+++ b/sass/components/_workers.scss
@@ -33,6 +33,7 @@
 }
 
 .workers-name {
+  padding-top: 30px;
   margin-bottom: 10px;
   font-weight: $medium-font-weight;
   font-size: $font-size-16;
