--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -34,6 +34,7 @@
 
   &-link.link {
     display: inline-flex;
+    justify-content: center;
     align-items: center;
     height: 44px;
     width: 44px;
