--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -11,6 +11,7 @@
 
   &-link.link {
     display: inline-flex;
+    justify-content: center;
     align-items: center;
     height: 44px;
     width: 44px;
