Изменяет размер шрифта в мобильном меню

--- a/css/main.css
+++ b/css/main.css
@@ -1279,7 +1279,7 @@ ul {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin: -15px;
-    z-index: 0;
+    z-index: -1;
   }
 }
 
@@ -2082,6 +2082,7 @@ ul {
   padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
+  padding-right: 40px;
   letter-spacing: 0.02em;
   position: fixed;
   display: -webkit-box;
@@ -2173,7 +2174,7 @@ ul {
 
 .mobile-contacts__link--tel {
   font-weight: 500;
-  font-size: 34px;
+  font-size: calc(24px + (34 - 24) * (100vw - 300px) / (380 - 300));
   line-height: 1.18;
   color: #2196f3;
 }
@@ -2193,7 +2194,7 @@ ul {
 
 .mobile-social__link.link {
   font-weight: 500;
-  font-size: 18px;
+  font-size: calc(9px + (18 - 9) * (100vw - 300px) / (440 - 300));
   line-height: 1.22;
   color: #2196f3;
 }
