--- a/css/main.css
+++ b/css/main.css
@@ -1813,7 +1813,8 @@ ul {
 }
 
 .user-form {
-  width: 448px;
+  width: 100%;
+  max-width: 448px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1857,13 +1858,15 @@ ul {
 
 @media screen and (max-width: 767px) {
   .user-form__input {
-    width: 370px;
+    width: 100%;
+    max-width: 370px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .user-form__input {
-    width: 448px;
+    width: 100%;
+    max-width: 448px;
   }
 }
 
@@ -1876,13 +1879,15 @@ ul {
 
 @media screen and (max-width: 767px) {
   .user-form__comment {
-    width: 370px;
+    width: 100%;
+    max-width: 448px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .user-form__comment {
-    width: 448px;
+    width: 100%;
+    max-width: 448px;
   }
 }
 
@@ -2174,7 +2179,7 @@ ul {
 
 .mobile-contacts__link--tel {
   font-weight: 500;
-  font-size: calc(24px + (34 - 24) * (100vw - 300px) / (380 - 300));
+  font-size: 34px;
   line-height: 1.18;
   color: #2196f3;
 }
