--- a/sass/components/_user-form.scss
+++ b/sass/components/_user-form.scss
@@ -1,5 +1,7 @@
 .user-form {
-  width: 448px;
+  width: 100%;
+  max-width: 448px;
+
   margin-left: auto;
   margin-right: auto;
 
@@ -33,11 +35,13 @@
     padding: 12px 12px 12px 42px;
 
     @media screen and (max-width: 767px) {
-      width: 370px;
+      width: 100%;
+      max-width: 370px;
     }
 
     @media screen and (min-width: 768px) {
-      width: 448px;
+      width: 100%;
+      max-width: 448px;
     }
   }
 
@@ -48,11 +52,13 @@
     height: 120px;
 
     @media screen and (max-width: 767px) {
-      width: 370px;
+      width: 100%;
+      max-width: 448px;
     }
 
     @media screen and (min-width: 768px) {
-      width: 448px;
+      width: 100%;
+      max-width: 448px;
     }
   }
 
