Изменяет точечно стили героя и заголовка секции клиентов

--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -16,6 +16,11 @@
   text-align: center;
 
   color: $first-text-color;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
 .customers-list {
