--- a/css/main.css
+++ b/css/main.css
@@ -689,27 +689,12 @@ ul {
 .overlay-hero {
   margin-left: auto;
   margin-right: auto;
-  max-width: 480px;
-  height: 400px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-background/hero-background-480-400@1x.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background/hero-background-480-400@1x.jpg);
-}
-
-@media screen and (min-width: 768px) {
-  .overlay-hero {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .overlay-hero {
-    height: 600px;
-    max-width: 1600px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1110,6 +1095,13 @@ ul {
   line-height: 1.17;
   text-align: center;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
 .customers-list {
