--- a/sass/components/_mobile-container.scss
+++ b/sass/components/_mobile-container.scss
@@ -4,9 +4,11 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   top: 0;
   left: 0;
   width: 100%;
+  min-height: 100vh;
   height: 100%;
   z-index: 1;
 
