--- a/css/main.css
+++ b/css/main.css
@@ -2172,7 +2172,7 @@ ul {
 
 .mobile-contacts__link--tel {
   font-weight: 500;
-  font-size: 34px;
+  font-size: calc(17px + (34 - 17) * (100vw - 300px) / (440 - 300));
   line-height: 1.18;
   color: #2196f3;
 }
