--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -133,7 +133,6 @@
 
 .menu-button {
   display: inline-flex;
-
   margin: 0;
   padding: 0;
   border: none;
@@ -151,6 +150,9 @@
 
 .menu-button.is-open .menu-button__icon-cross {
   display: block;
+  position: fixed;
+  top: 10px;
+  right: 15px;
 }
 
 .menu-button.is-open .menu-button__icon-menu {
