--- a/sass/components/_mobile-container.scss
+++ b/sass/components/_mobile-container.scss
@@ -86,6 +86,10 @@
   font-size: calc(17px + (34 - 17) * (100vw - 300px) / (440 - 300));
   line-height: 1.18;
   color: $accent-color;
+
+  @media screen and (min-width: 380px) and (max-width: 768px) {
+    font-size: 34px;
+  }
 }
 
 .mobile-contacts__link--mail {
@@ -105,6 +109,10 @@
   line-height: 1.22;
 
   color: $accent-color;
+
+  @media screen and (min-width: 380px) and (max-width: 768px) {
+    font-size: 18px;
+  }
 }
 
 .mobile-social__item {
