--- a/css/main.css
+++ b/css/main.css
@@ -2083,9 +2083,10 @@ ul {
 }
 
 .mobile-container {
-  padding: 48px 40px;
-  letter-spacing: 0.02em;
-  position: fixed;
+  display: none;
+}
+
+.mobile-container.is-open {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2096,29 +2097,15 @@ ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: fixed;
+  padding: 48px 40px;
+  letter-spacing: 0.02em;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100vh;
   height: 100%;
   z-index: 1;
   background-color: #ffffff;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-container {
-    display: none;
-  }
-}
-
-.mobile-container {
-  display: none;
-}
-
-.mobile-container.is-open {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .menu-button {
@@ -2127,8 +2114,7 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-button:hover,
-.menu-button:focus {
+.menu-button:hover, .menu-button:focus {
   color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -2138,9 +2124,12 @@ ul {
   z-index: 2;
 }
 
-.menu-button__icon-menu,
-.menu-button__icon-cross {
+.menu-button__icon-menu, .menu-button__icon-cross {
   fill: currentColor;
+}
+
+.mobile-nav__list {
+  margin-bottom: auto;
 }
 
 .mobile-nav__link {
@@ -2152,15 +2141,14 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-nav__link:hover,
-.mobile-nav__link:focus {
+.mobile-nav__link:hover, .mobile-nav__link:focus {
   color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-nav__item:not(:last-child) {
-  margin-bottom: 37.71px;
+  margin-bottom: 32px;
 }
 
 .mobile-nav__link--current.link {
@@ -2203,14 +2191,14 @@ ul {
 
 .mobile-social__link.link {
   font-weight: 500;
-  font-size: calc(9px + (18 - 9) * (100vw - 300px) / (440 - 300));
+  font-size: 18px;
   line-height: 1.22;
   color: #2196f3;
 }
 
-@media screen and (min-width: 380px) and (max-width: 768px) {
+@media screen and (max-width: 439px) {
   .mobile-social__link.link {
-    font-size: 18px;
+    font-size: calc(9px + (18 - 9) * (100vw - 300px) / (440 - 300));
   }
 }
 
