--- a/sass/components/_mobile-container.scss
+++ b/sass/components/_mobile-container.scss
@@ -1,128 +1,123 @@
 .mobile-container {
-  padding: 48px 40px;
-  letter-spacing: 0.02em;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100vh;
-  height: 100%;
-  z-index: 1;
-
-  background-color: $main-background-color;
-
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
-}
-
-.mobile-container {
   display: none;
 }
 
 .mobile-container.is-open {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  padding: 48px 40px;
+  letter-spacing: 0.02em;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+
+  background-color: $main-background-color;
 }
+
 .menu-button {
   color: $logo-black-color;
   @include transit;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    @include transit;
+  }
+
+  &__svg {
+    z-index: 2;
+  }
+
+  &__icon-menu,
+  &__icon-cross {
+    fill: currentColor;
+  }
 }
 
-.menu-button:hover,
-.menu-button:focus {
-  color: $accent-color;
-  @include transit;
-}
+.mobile-nav {
+  &__list {
+    margin-bottom: auto;
+  }
 
-.menu-button__svg {
-  z-index: 2;
-}
+  &__link {
+    font-weight: $medium-font-weight;
+    font-size: 40px;
+    line-height: 1.18;
 
-.menu-button__icon-menu,
-.menu-button__icon-cross {
-  fill: currentColor;
-}
+    color: $first-text-color;
+    @include transit;
+  }
 
-.mobile-nav__list {
-  // margin-bottom: 302px;
-}
+  &__link:hover,
+  &__link:focus {
+    color: $accent-color;
+    @include transit;
+  }
 
-.mobile-nav__link {
-  font-weight: $medium-font-weight;
-  font-size: 40px;
-  line-height: 1.18;
+  &__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
 
-  color: $first-text-color;
-  @include transit;
-}
-
-.mobile-nav__link:hover,
-.mobile-nav__link:focus {
-  color: $accent-color;
-  @include transit;
-}
-
-.mobile-nav__item:not(:last-child) {
-  margin-bottom: 37.71px;
-}
-
-.mobile-nav__link--current.link {
-  color: $accent-color;
+  &__link--current.link {
+    color: $accent-color;
+  }
 }
 
 .mobile-contacts {
   margin-bottom: 64px;
-}
 
-.mobile-contacts__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-contacts__link--tel {
-  font-weight: $medium-font-weight;
-  font-size: calc(17px + (34 - 17) * (100vw - 300px) / (440 - 300));
-  line-height: 1.18;
-  color: $accent-color;
-
-  @media screen and (min-width: 380px) and (max-width: 768px) {
-    font-size: 34px;
+  &__item:not(:last-child) {
+    margin-bottom: 32px;
   }
-}
 
-.mobile-contacts__link--mail {
-  font-weight: $medium-font-weight;
-  font-size: 24px;
-  line-height: $line-height-1-17;
-  color: $second-text-color;
+  &__link--tel {
+    font-weight: $medium-font-weight;
+    font-size: calc(17px + (34 - 17) * (100vw - 300px) / (440 - 300));
+    line-height: 1.18;
+    color: $accent-color;
+
+    @media screen and (min-width: 380px) and (max-width: 768px) {
+      font-size: 34px;
+    }
+  }
+
+  &__link--mail {
+    font-weight: $medium-font-weight;
+    font-size: 24px;
+    line-height: $line-height-1-17;
+    color: $second-text-color;
+  }
 }
 
 .mobile-social {
   display: flex;
-}
 
-.mobile-social__link.link {
-  font-weight: $medium-font-weight;
-  font-size: calc(9px + (18 - 9) * (100vw - 300px) / (440 - 300));
-  line-height: 1.22;
-
-  color: $accent-color;
-
-  @media screen and (min-width: 380px) and (max-width: 768px) {
+  &__link.link {
+    font-weight: $medium-font-weight;
     font-size: 18px;
+    line-height: 1.22;
+
+    color: $accent-color;
+
+    @media screen and (max-width: 439px) {
+      font-size: calc(9px + (18 - 9) * (100vw - 300px) / (440 - 300));
+    }
   }
-}
 
-.mobile-social__item {
-  padding: 0 10px;
-}
+  &__item {
+    padding: 0 10px;
+  }
 
-.mobile-social__item:first-child {
-  padding-left: 0;
-}
+  &__item:first-child {
+    padding-left: 0;
+  }
 
-.mobile-social__item:not(:last-child) {
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  &__item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
 }
