--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -142,19 +142,19 @@
   @media screen and (min-width: 768px) {
     display: none;
   }
-}
 
-.menu-button__icon-cross {
-  display: none;
-}
+  &__icon-cross {
+    display: none;
+  }
 
-.menu-button.is-open .menu-button__icon-cross {
-  display: block;
-  position: fixed;
-  top: 10px;
-  right: 15px;
-}
+  &.is-open &__icon-cross {
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 15px;
+  }
 
-.menu-button.is-open .menu-button__icon-menu {
-  display: none;
+  &.is-open &__icon-menu {
+    display: none;
+  }
 }
